tests/errors/alfa/runtime_error_out_of_index_vector.alfa
//****Error de ejecucion: Indice fuera de rango.
main
{
    array int[5] x;

    x[5]=3;
}    